# relation

./: Changes.txt  LICENSE  project.sh  relation.cabal
Data/: Relacion.hs
Data/Examples/: T01_Relacion.hs  T02_Relacion.hs
Examples/: T01_Relation.hs  T02_Relation.hs
include/pointfree-style/plumbers-0.0.2/src/Control/: Plumbers.hs
include/pointfree-style/plumbers-0.0.2/src/Control/Plumbers/: Monad.hs  Specs.hs  TH.hs
include/pointfree-style/pointless-fun-1.1.0.1/src/Data/Function/: Pointless.hs
include/pointfree-style/pointless-haskell-0.0.8/src/Generics/Pointless/: Bifctrable.hs  Bifunctors.hs  Combinators.hs  Fctrable.hs  Functors.hs  HFunctors.hs  MonadCombinators.hs  RecursionPatterns.hs
include/pointfree-style/pointless-haskell-0.0.8/src/Generics/Pointless/Examples/: Examples.hs  Observe.hs
include/pointfree-style/pointless-haskell-0.0.8/src/Generics/Pointless/Observe/: Functors.hs  RecursionPatterns.hs
src/Data/: Relation.hs
src/Data/Relation/Examples/: E02.hs
tests/: doctest-examples.hs
