name:               relation
version:            0.2
synopsis:           A data structure representing Relations on Sets.
description:
                    A library to model relationships between two objects that are subclasses of
                    Ord.
                    .
                    Instead using a Map structure we use a two Maps that allows 
                    fast searching either by the key element or the value element.
                    .
                    Each of Map is between an element and a set of values. 
                    Thus careful coordination of operations is required.
                    . 
                    This library lacks of extensive testing, formal testing or automated testing.
                    Also in comparison to Data.Set or Data.Map (which provide the underlying
                    infrastructure used) there are some missing methods. 
                    . 
                    An example of use is the include source file T02_Relation.hs.
                    .
                    Changes:
                    @
                    \ 2012.06.06.  DD. Translated to English.
                    \ 2009.11.09. LFL. Corrected the definition of delete.
                    \ 2009.11.26. LFL. Construction
                    @

homepage:           https://www.github.com/d-day/relation/
bug-reports:        https://www.github.com/d-day/relation/issues
license:            BSD3
license-file:       LICENSE
author:             Drew Day
                    Leonel Fonseca
maintainer:         Drew Day <drewday@gmail.com>
copyright:          (C) Drew Day 2012
                    (C) Leonel Fonseca 2010
category:           Data Structures
stability:          Experimental
build-type:         Simple
cabal-version:	     >= 1.8
tested-with:        GHC==7.4

extra-source-files:
                    LICENSE,
                    Changes.txt,  
                    src/Data/Relation.hs,
                    Examples/T01_Relation.hs,
                    Examples/T02_Relation.hs


library
  hs-source-dirs :  src
  exposed-modules:  Data.Relation
  build-depends  :  base           >= 4.2 && < 6.0,
                    array          >= 0.4 && < 0.5,
                    containers     >= 0.4 && < 0.6

source-repository head
  type:     git
  location: https://github.com/d-day/relation

